# stockdice.app

./: .gcloudignore  .gitignore  GEMINI.md  Procfile  README.md  debug.sh  deploy-prod.sh  download_all.py  download_forex.py  download_symbol_directory.py  download_values.py  environment-EXAMPLE.toml  helpers.py  main.py  pyproject.toml  requirements.txt  service.yaml
cli/: download_values.py  initialize_db.py  refresh_db.py  refresh_db_service.py  roll_stockdice.py
refresh-db/: refresh_db.py
shared-library/: pyproject.toml  setup.py
shared-library/stockdice/: __init__.py  balance_sheet.py  company_profile.py  config.py  db.py  dice.py  forex.py  helpers.py  income.py  ratelimits.py  stocklist.py  timedeltas.py  timeutils.py  trading_hours.py
shared-library/tests/: test_timedeltas.py  test_trading_hours.py
specs/: 2025-08-04-initial-web-app.md
stockdice/: __init__.py  balance_sheet.py  company_profile.py  config.py  db.py  dice.py  forex.py  home.py  income.py  render.py  stocklist.py  trading_hours.py
stockdice/static/: flat-remix.min.css  style.css
stockdice/templates/: customize.html.j2  home.html.j2  roll.html.j2
tests/: conftest.py
tests/unit/: test_home.py  test_trading_hours.py
webapp/: README.md  pyproject.toml
webapp/stockdiceapp/: __init__.py  home.py
webapp/stockdiceapp/static/: style.css
webapp/stockdiceapp/templates/: base.html.j2  home.html.j2
