[project]
name = "stockdice-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stockdice",
]

[tool.uv.workspace]
members = [
    "shared-library",
    "webapp",
]

[tool.uv.sources]
stockdice = { workspace = true }

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "ruff>=0.12.7",
]
