[project]
name = "stockdice"
version = "0.1.0"
description = "A random stock picker working with FMP API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "google-cloud-storage>=3.2.0",
    "httpx>=0.28.1",
    "numpy>=2.3.2",
    "polars>=1.32.0",
    "pyarrow>=21.0.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./"]
include = ["stockdice"]
